Issue #2431 - Upgrade to Junit 5
Migrating @RunWith(Parameterized.class)
      to @ParameterizedTest with Argument Sources

Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>